moved some more generic classes over from ngsutilsj.support